(library
 (name lunar_test)
 (package lunar)
 (inline_tests)
 (flags (:standard) -open Lunar)
 (libraries lunar)
 (private_modules
  duration_test
  month_test
  duration_dhms_test
  duration_weekday_test
  weekday_test
  era_test
  date_make_test
  date_weekday_test
  date_arith_op_test
  date_add_sub_test
  date_from_string_test
  date_clamp_test
  time_test
  time_am_pm_test
  time_truncate_round_test
  time_predicate_test
  time_diff_test
  time_from_string_test
  time_clamp_test
  datetime_make_test
  datetime_weekday_test
  datetime_arith_test
  datetime_diff_test)
 (preprocess
  (pps ppx_expect)))
