(library
 (name lunar_test)
 (inline_tests)
 (flags (:standard) -open Lunar)
 (libraries lunar)
 (private_modules
  duration_test
  month_test
  duration_dhms_test
  duration_weekday_test
  weekday_test
  era_test
  date_make_test
  date_weekday_test
  date_arith_op_test
  date_add_sub_test
  date_from_string_test
  date_clamp_test
  date_predicate_test
  date_operation_test
  date_age_test
  date_next_pred_day_when_test
  date_eow_eom_eoy_test
  date_truncated_test
  date_pred_prev_test
  date_large_set_test
  time_test
  time_am_pm_test
  time_truncate_round_test
  time_predicate_test
  time_diff_test
  time_from_string_test
  time_clamp_test
  time_pred_succ_test
  time_start_end_test
  datetime_make_test
  datetime_from_duration_test
  datetime_facts_test
  datetime_from_string_test
  datetime_add_sub_test
  datetime_diff_test
  datetime_truncate_test
  datetime_pred_succ_test
  datetime_start_end_test
  datetime_predicate_test
  timezone_test
  timezone_from_string_test
  zoned_meeting_test
  zoned_datetime_from_string_test
  calendarlib_inspired_test
  range_fact_test
  range_comb_test
  range_iter_test
  range_prebuilt_test
  misc_test
  unix_comparison_test)
 (preprocess
  (pps ppx_expect)))
